# Key-Value-Store

./: .gitignore  Dockerfile  Pipfile  README.md  autoscaling.py  autoscaling_client_metrics.csv  autoscaling_client_metrics_before_recover.csv  autoscaling_client_metrics_during_recover.csv  autoscaling_logs.txt  autoscaling_overall_stats.csv  bserver.go  client.py  combine.py  combined.csv  combined_unique.csv  consistent_hashing.py  consistent_hasing.conf  correlation.py  cserver.go  data.csv  data.py  data_with_stats.csv  databases.db  fault_recovery.py  fault_recovery_old.py  hash_ring.py  in-memory-kv.py  key_values.db  kv1.py  kv2.py  kv3.py  metrics.py  models.py  newFeature_workload.txt  new_client.py  new_client_forHW.py  new_data.csv  new_workload.txt  non-autoscaling_client_metrics.csv  non-autoscaling_client_metricsOnHeavierData.csv  (+21 more)
Combined_Data_Models/: best_nn.pth  lin_reg.py  lin_reg_best.joblib  rf.py  svr.py  utils.py
data/: 1kv-fix-op-var-proc.json  1kv-nginx-fix-op-var-proc.json  2kv-fix-op-var-proc.json  2kv-nginx-fix-op-var-proc.json  3kv-fix-op-var-proc.json  3kv-nginx-fix-op-var-proc.json  kv.json  kv1.json  kv2.json  kv3.json
echo_kv/: decho.go  echo.go  fecho.go  go.mod
kv-store/: client.py  consistent_hashing.conf  go.mod  go.sum  main1.go  main2.go  pebbleStore.go  pogrebStore.go
models/: best_nn.pth  lin_reg.py  lin_reg_best.joblib  nn.py  rf.joblib  rf.py  svr.py  utils.py
multi-thread_reports/: autoScalingWithFixedErrorRateAndLighterWorkloadThreshold.csv.csv  (+26 more)
rust-kv-sleb/: Cargo.toml
rust-kv-sleb/src/: main.rs
(+100 files in other folders)
