[package]
name = "rust-kv-sleb"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
tokio-rustls = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
sled = "0.34.7"